# zynaddsubfx

./: .travis.yml
src/: CMakeLists.txt  globals.h
src/DSP/: FFTwrapper.cpp  FFTwrapper.h
src/Misc/: CMakeLists.txt  QtXmlWrapper.cpp  QtXmlWrapper.h  XMLwrapper.h
src/Output/: CMakeLists.txt  oscoutput.cpp
src/Synth/: OscilGen.cpp
src/UI/: CMakeLists.txt  NSM.C
